--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="text_size">20sp</dimen>
     <dimen name="layout_padding">16dp</dimen>
+    <dimen name="layout_margin">16dp</dimen>
 
 </resources>
