Agregar un detector de clics al apodo TextView Paso 3: agregue un color de fondo a la vista TextView del apodo

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,6 @@
         android:fontFamily="@font/roboto"
         android:text="@string/done"
         android:textStyle="bold|italic"
-        android:onClick="clickHandlerFunction"
         tools:ignore="OnClick" />
 
     <TextView
@@ -51,7 +50,10 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:visibility="gone"
-        android:text=""/>
+        android:text=""
+        android:background="@color/colorAccent"
+        android:paddingBottom="@dimen/Small_Padding"
+        />
 
     <ImageView
         android:id="@+id/imageView"
